--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <!-- Main boostrap css file -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAULck9G4fwelNGU5KvF9APACr3PRqQdzI" ></script>
   </head>
   <body>
     <noscript>
